crates/analyzer/tests/snapshots/errors__call_keccak_without_parameter.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `keccak256` expects 1 argument, but 0 were provided
  ┌─ [snippet]:3:3
  │
3 │   keccak256()
  │   ^^^^^^^^^-- supplied 0 arguments
  │   │         
  │   expects 1 argument


